<resources>
    <string name="app_name">common</string>

    <string name="default_format">###,##0.00</string>
    <string name="default_decimal_separator">\'</string>

    <string name="icon_time">&#xe60e;</string>
    <string name="icon_back">&#xe620;</string>
    <string name="icon_unfold">&#xe60f;</string>
    <string name="icon_location">&#xe606;</string>
    <string name="icon_info">&#xe639;</string>
    <string name="icon_phone">&#xe607;</string>
    <string name="icon_round_checke">&#xe609;</string>
    <string name="icon_daeva_user2">&#xe67e;</string>

    <string name="icon_new">&#xe6f5;</string>

    <string name="icon_offline">&#xe6eb;</string>

    <string name="icon_vegetable">&#xe672;</string>
    <string name="icon_shopservice">&#xe66f;</string>
    <string name="icon_delivery">&#xe677;</string>
    <string name="icon_housekeeping">&#xe675;</string>
    <string name="icon_numeral">&#xe681;</string>

    <string name="icon_bar_code">&#xe643;</string>

    <string name="icon_clock">&#xe68e;</string>

    <string name="icon_filter">&#xe628;</string>
    <string name="icon_price_filter">&#xe6f1;</string>
    <string name="icon_sale_filter">&#xe6f0;</string>
    <string name="icon_hot_filter">&#xe65e;</string>

    <string name="icon_info_fill">&#xe638;</string>


    <string name="icon_home_fill">&#xe693;</string>
    <string name="icon_home">&#xe694;</string>
    <string name="icon_shopcart_fill">&#xe68f;</string>
    <string name="icon_shopcart">&#xe690;</string>
    <string name="icon_supplier_fill">&#xe6b0;</string>
    <string name="icon_supplier">&#xe6af;</string>
    <string name="icon_mine_fill">&#xe697;</string>
    <string name="icon_mine">&#xe698;</string>
    <string name="icon_sort_fill">&#xe695;</string>
    <string name="icon_sort">&#xe696;</string>

    <string name="icon_user">&#xe679;</string>

    <string name="icon_search">&#xe60c;</string>

    <string name="icon_round_add">&#xe636;</string>

    <string name="icon_sort_head1">&#xe684;</string>
    <string name="icon_sort_head2">&#xe686;</string>
    <string name="icon_sort_head3">&#xe68b;</string>
    <string name="icon_sort_head4">&#xe688;</string>
    <string name="icon_sort_head5">&#xe68a;</string>
    <string name="icon_sort_head6">&#xe687;</string>
    <string name="icon_sort_head7">&#xe689;</string>
    <string name="icon_sort_head8">&#xe685;</string>
    <string name="icon_sort_head9">&#xe683;</string>

    <string name="icon_wallet">&#xe69d;</string>

    <string name="icon_shoppingbag">&#xe69a;</string>
    <string name="icon_safe">&#xe663;</string>
    <string name="icon_album"> &#xe65a;</string>

    <string name="icon_like">&#xe617;</string>

    <string name="icon_setting">&#xe624;</string>
    <string name="icon_gift">&#xe67d;</string>

    <string name="icon_arrow_right">&#xe62a;</string>
    <string name="icon_qr_code">&#xe62c;</string>
    <string name="icon_delete">&#xe62d;</string>
    <string name="icon_close">&#xe60b;</string>
    <string name="icon_close_fill">&#xe60a;</string>

    <string name="icon_refresh">&#xe62b;</string>

    <string name="icon_privilege">&#xe69c;</string>


    <string name="icon_activitymanager">&#xe713;</string>
    <string name="icon_ordermanager">&#xe6c1;</string>
    <string name="icon_addressmanager">&#xe6c3;</string>
    <string name="icon_walletmanager">&#xe6b9;</string>
    <string name="icon_messagemanager">&#xe6c0;</string>
    <string name="icon_collectmanager">&#xe6b5;</string>
    <string name="icon_accountmanager">&#xe6ba;</string>

    <string name="icon_order_offline">&#xe6ee;</string>
    <string name="icon_order_unpay">&#xe6fc;</string>
    <string name="icon_order_submit">&#xe6b4;</string>
    <string name="icon_order_delivery">&#xe6c2;</string>
    <string name="icon_order_excuting">&#xe6bb;</string>
    <string name="icon_order_clientwaitforrecevie">&#xe6b4;</string>
    <string name="icon_order_waitforrate">&#xe6b8;</string>
    <string name="icon_order_invalid">&#xe6bc;</string>
    <string name="icon_order_all">&#xe6b7;</string>

    <string name="icon_order_unpay_new">&#xe70c;</string>
    <string name="icon_order_submit_new">&#xe70e;</string>
    <string name="icon_order_excuting_new">&#xe70d;</string>
    <string name="icon_order_clientwaitforrecevie_new">&#xe61b;</string>
    <string name="icon_order_waitforrate_new">&#xe61c;</string>

    <string name="icon_edit">&#xe604;</string>

    <string name="icon_address_default">&#xe6a9;</string>

    <string name="icon_balance">&#xe6bf;</string>
    <string name="icon_point">&#xe6c4;</string>
    <string name="icon_coupon">&#xe6be;</string>
    <string name="icon_deliverycoupon">&#xe6c2;</string>
    <string name="icon_goodscoupon">&#xe6b6;</string>

    <string name="icon_psw">&#xe6c5;</string>

    <string name="icon_mobile">&#xe67a;</string>
    <string name="icon_shortinfo">&#xe67b;</string>
    <string name="icon_unlock">&#xe630;</string>
    <string name="icon_addressbook">&#xe62e;</string>

    <string name="icon_member_card">&#xe6a2;</string>

    <string name="icon_add">&#xe637;</string>
    <string name="icon_minus">&#xe662;</string>
    <string name="icon_creative">&#xe652;</string>
    <string name="icon_round_check_fill">&#xe608;</string>

    <string name="icon_vip">&#xe6a3;</string>

    <string name="icon_service_disable">&#xe6d5;</string>

    <string name="icon_service_vegetable">&#xe6d2;</string>
    <string name="icon_service_shopservice">&#xe6d1;</string>
    <string name="icon_service_delivery">&#xe6d0;</string>
    <string name="icon_service_housekeeping">&#xe6d3;</string>
    <string name="icon_service_vip">&#xe6d4;</string>
    <string name="icon_service_mobile">&#xe6dc;</string>

    <string name="icon_service_hydropower">&#xe6dd;</string>
    <string name="icon_service_oil">&#xe6e2;</string>
    <string name="icon_service_express">&#xe6e3;</string>
    <string name="icon_service_tool">&#xe6e4;</string>
    <string name="icon_service_trafficfines">&#xe6e5;</string>
    <string name="icon_service_game">&#xe6e6;</string>
    <string name="icon_service_finance">&#xe6e7;</string>
    <string name="icon_service_bus">&#xe6e8;</string>
    <string name="icon_service_lottery">&#xe6e9;</string>
    <string name="icon_service_ticket">&#xe6ea;</string>
    <string name="icon_service_numeral">&#xe6ec;</string>
    <string name="icon_service_banquet">&#xe668;</string>
    <string name="icon_service_fruit">&#xe669;</string>
    <string name="icon_service_member">&#xe711;</string>
    <string name="icon_service_specialoffer">&#xe71d;</string>


    <string name="icon_service_more">&#xe6cf;</string>

    <string name="icon_prompt">&#xe6a8;</string>

    <string name="icon_location_fill">&#xe605;</string>

    <string name="icon_hot_fill">&#xe65d;</string>
    <string name="icon_hot">&#xe65e;</string>
    <string name="icon_history">&#xe629;</string>

    <string name="icon_shop">&#xe61e;</string>

    <string name="icon_timeout">&#xe6b2;</string>
    <string name="icon_used">&#xe6b3;</string>

    <string name="icon_notification">&#xe619;</string>
    <string name="icon_discount">&#xe6ca;</string>

    <string name="icon_creative_fill">&#xe651;</string>

    <string name="icon_delivery_tag">&#xe6d9;</string>
    <string name="icon_pickbyself_tag">&#xe6da;</string>
    <string name="icon_online_tag">&#xe6db;</string>

    <string name="icon_call">&#xe6c8;</string>
    <string name="icon_navigation">&#xe6c9;</string>

    <string name="icon_round_add_fill">&#xe635;</string>

    <string name="icon_unsubscribe">&#xe6ed;</string>

    <string name="icon_unit_select">&#xe69b;</string>

    <string name="icon_order">&#xe6f3;</string>

    <string name="icon_phone_new">&#xe6c8;</string>

    <string name="icon_balancepay">&#xe6fd;</string>
    <string name="icon_apli">&#xe66d;</string>
    <string name="icon_weixin">&#xe6d7;</string>

    <string name="icon_balancedetail">&#xe6fe;</string>
    <string name="icon_outofstock">&#xe6ff;</string>

    <string name="icon_onlinepay">&#xe701;</string>
    <string name="icon_cashpay">&#xe702;</string>

    <string name="icon_share">&#xe704;</string>
    <string name="icon_share_weixin">&#xe722;</string>
    <string name="icon_share_weixin_friend">&#xe708;</string>
    <string name="icon_share_sina">&#xe721;</string>
    <string name="icon_share_qq">&#xe70a;</string>
    <string name="icon_share_qq_zone">&#xe709;</string>
    <string name="icon_share_copy">&#xe723;</string>


    <string name="icon_ongoing">&#xe715;</string>
    <string name="icon_complete">&#xe70f;</string>
    <string name="icon_showorder">&#xe712;</string>
    <string name="icon_myprize">&#xe714;</string>

    <string name="icon_query">&#xe6cb;</string>

    <string name="icon_sell_out">&#xe6d6;</string>
    <string name="icon_point_fill">&#xe6ae;</string>

    <string name="icon_loseefficacy">&#xe71f;</string>
    <string name="icon_click">&#xe71e;</string>
    <string name="icon_briberymoney">&#xe720;</string>

    <string name="icon_close_simple">&#xe603;</string>

    <string name="icon_waterbill">&#xe727;</string>
    <string name="icon_electricbill">&#xe728;</string>
    <string name="icon_gasbill">&#xe729;</string>

</resources>
