<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vipUpdateStepOneActivity"
            type="com.j1j2.pifalao.feature.vipupdate.stepone.VipUpdateStepOneActivity" />
    </data>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLayoutBg"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backBtn"
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="@dimen/actionbar_height"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/actionbar_btn_bg"
                android:text="@string/icon_back"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/icon_normal"
                app:OnClickListener="@{vipUpdateStepOneActivity}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="激活VIP会员"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_actionbar_title" />
        </com.zhy.autolayout.AutoRelativeLayout>


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="70px"
            android:paddingTop="@dimen/padding_biger">

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_member_card"
                android:textColor="@color/colorAccent"
                android:textSize="128px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:text="激活VIP会员，享受更多优质服务！"
                android:textColor="@color/colorText333"
                android:textSize="@dimen/text_big" />

        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1px"
            android:background="@color/colorGrayEDEDED" />


        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/updateVIPBtn"
            android:layout_width="match_parent"
            android:layout_height="160px"
            android:layout_marginBottom="@dimen/padding_biger"
            android:layout_marginLeft="24px"
            android:layout_marginRight="24px"
            android:layout_marginTop="@dimen/padding_biger"
            android:background="@drawable/vip_update_btn_bg"
            android:gravity="center"
            android:layerType="software"
            android:orientation="horizontal"
            app:OnClickListener="@{vipUpdateStepOneActivity}">

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_add"
                android:textColor="@color/colorBlack"
                android:textSize="68px" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_small"
                android:text="激活VIP会员"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_biger" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginLeft="24px"
            android:layout_marginRight="24px"
            android:background="@drawable/vip_update_tip_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_noraml"
            android:paddingTop="@dimen/padding_noraml">

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_noraml"
                android:text="@string/icon_creative"
                android:textColor="@color/colorTextaaa"
                android:textSize="40px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="前2000名新用户下单一次就免费送VIP会员"
                android:textColor="@color/colorTextaaa"
                android:textSize="@dimen/text_normal" />

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>
</layout>