<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.products.ProductsActivity">

    <data>

        <variable
            name="shopCart"
            type="com.j1j2.pifalao.app.ShopCart" />

        <variable
            name="productViewModel"
            type="com.j1j2.pifalao.feature.products.ProductsViewModel" />
    </data>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionbar_height"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/backBtn"
                    fontPath="iconfont/iconfont.ttf"
                    android:layout_width="@dimen/actionbar_height"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/icon_back"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/icon_normal"
                    app:OnClickListener="@{productViewModel.productsActivity}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@{productViewModel.title}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_actionbar_title" />


                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sortSpinner"
                    fontPath="iconfont/iconfont.ttf"
                    android:layout_width="180px"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/icon_filter"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/icon_normal" />
            </com.zhy.autolayout.AutoRelativeLayout>

            <include
                layout="@layout/view_deliverytime"
                bind:hour="@{productViewModel.hour}"
                bind:isLogin="@{productViewModel.productsActivity.isLogin}"
                bind:minute="@{productViewModel.minute}"
                bind:module="@{productViewModel.productsActivity.module}"
                bind:second="@{productViewModel.second}" />

            <com.malinskiy.superrecyclerview.SuperRecyclerView
                android:id="@+id/productList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorLayoutBg"
                app:layout_empty="@layout/view_empty"
                app:layout_moreProgress="@layout/view_progressbar"
                app:layout_progress="@layout/view_progressbar" />
        </com.zhy.autolayout.AutoLinearLayout>


        <cn.bingoogolapple.badgeview.BGABadgeTextView
            android:id="@+id/shopCartView"
            fontPath="iconfont/iconfont.ttf"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/padding_noraml"
            android:layout_marginRight="@dimen/padding_noraml"
            android:background="@drawable/services_dragview_bg"
            android:gravity="center"
            android:text="@string/icon_shopcart"
            android:textColor="@color/colorWhite"
            android:textSize="60px"
            app:OnClickListener="@{productViewModel.productsActivity}"
            app:badge_bgColor="@color/colorAccent"
            app:badge_gravity="rightTop"
            app:badge_textSize="12sp"
            app:layout_auto_basewidth="height"
            app:showNum="@{shopCart.AllUnitNum}" />

    </com.zhy.autolayout.AutoRelativeLayout>
</layout>